# unidad1-project

./: README.md  main.py  pyproject.toml
src/readers/: readers.py
src/unidad1_project/: __init__.py
src/unidad1_project/logging/: __init__.py  logging.py
src/unidad1_project/orchestrator/: __init__.py  orchestrator.py
src/unidad1_project/readers/: __init__.py  readers.py
src/unidad1_project/transformers/: __init__.py  transformers.py
src/unidad1_project/writers/: __init__.py  writers.py
tests/: test_e2e.py  test_orchestrator.py  test_reader.py  test_transformer.py  test_writer.py
tests/data/: test.json
