[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["src/readers", "src/transformers", "src/writers"]

[project]
name = "unidad1-project"
version = "0.1.0"
description = "ETL a partir de CSV"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 120
target-version = "py311"